--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Project 2 , hello world!!!</h1>
     <script src="script.js"></script>
 </body>
 </html>
